--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+### Sass ###
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
+*.scss
+*.map
+*.min.css
